finished re-structure

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link rel="stylesheet" href="microphone/microphone.css">
+  <link rel="stylesheet" href="css/microphone.css">
 </head>
 <body style="text-align: center;">
   <center><div id="microphone"></div></center>
@@ -8,9 +8,9 @@
   <pre id="msgBody"></pre>
 
   <div id="info"></div>
-  <script src="microphone/microphone.js"></script>
 
-  
+
+  <script src="lib/microphone.js"></script>
   <script src="lib/jquery-2.1.1.min.js"></script>
   <script src="lib/underscore.js"></script>
   <script src="lib/backbone.js"></script>
