--- a/static/index.html
+++ b/static/index.html
@@ -3,11 +3,18 @@
   <link rel="stylesheet" href="css/microphone.css">
 </head>
 <body style="text-align: center;">
-  <center><div id="microphone"></div></center>
-  <pre id="result"></pre>
-  <pre id="msgBody"></pre>
 
-  <div id="info"></div>
+  <div class="container">
+
+  </div>
+
+  <script type="text/template" id='mic-template'>
+    <center><div id="microphone"></div></center>
+    <pre id="result"></pre>
+    <pre id="msgBody"></pre>
+
+    <div id="info"></div>
+  </script>
 
 
   <script src="lib/microphone.js"></script>
